--- a/local_rmd_nbooks/m2_QC_prelim_stage_anno.Rmd
+++ b/local_rmd_nbooks/m2_QC_prelim_stage_anno.Rmd
@@ -67,99 +67,24 @@ knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr
 ```
 
 
-# MSC preliminary stage annotation for strain assesment
-### Variable declarations
-
-```{r}
-
-##Strain cluster colours
-stg_lvls = c("Early ring", "Late ring", "Early trophozoite","Late trophozoite" , "Early schizont", "Late schizont",  "Gametocyte (developing)", "Female (HE)", "Female", "Female (LE)",  "Gametocyte (female)", "Male (HE)", "Male", "Male (LE)", "Gametocyte (male)", "Asexual", "Unassigned", "Failed QC", "Not assigned")
-
-stg_refnd_lvls = c("Early ring", "Late ring", "Early trophozoite", "Late trophozoite", "Early schizont", "Late schizont", "Gametocyte (committed)", "Gametocyte (developing)", "Gametocyte (branching)", "Female (HE)", "Female", "Female (LE)", "Gametocyte (female)", "Gametocyte (early female)", "Gametocyte (late female)", "Gametocyte (male)", "Male (HE)", "Male", "Male (LE)", "Gametocyte (early male)", "Gametocyte (late male)", "Asexual", "early trophozoite", "late ring", "late trophozoite", "early schizont", "early ring", "late schizont", "gametocyte (developing)", "gametocyte (female)", "gametocyte (male)", "Unassigned", "Failed qc", "Not assigned", "Atlas")
-
-stg_refnd_lvls2 = c('Early ring','Late ring','Early trophozoite','Late trophozoite','Early schizont','Late schizont', "Gametocyte (committed)","Gametocyte (developing)","Gametocyte (branching)", "Female (HE)", "Female", "Female (LE)", "Gametocyte (early female)","Gametocyte (late female)", "Male (HE)", "Male", "Male (LE)", "Gametocyte (early male)","Gametocyte (late male)", "Asexual", "Unassigned", "Failed QC", "Not assigned") #%>% str_to_sentence(.)
-
-sp_colors <- c('Early ring'='#D1EC9F',
-                     'Late ring'='#78C679',
-                     'Early trophozoite'='#FEEEAA',
-                     'Late trophozoite'='#FEB24C',
-                     'Early schizont'='#C9E8F1',
-                     'Late schizont'='#85B1D3',
-                     'Gametocyte (developing)'='thistle',
-                     'Gametocyte (female)'='#551A8B',
-                     'Gametocyte (male)'='mediumpurple',
-               'Unassigned'='red', 
-               'Not assigned'='#D6CFC7',
-               'Female (LE)'='#208cf7',
-               'Female (HE)'='#551A8B',
-               'Male (LE)'='#a894d1',
-               'Male (HE)'='mediumpurple',
-               'Failed QC' = 'grey',
-               'Gametocyte (committed)' = '#C399A2', 
-               'Gametocyte (developing)' = '#66444C', 
-               'Gametocyte (branching)' = '#66444C', 
-               'Gametocyte (early female)' = '#749E89', 
-               'Gametocyte (early male)' = '#7D87B2', 
-               'Gametocyte (late female)' = '#4E6D58', 
-               'Gametocyte (late male)' = '#41507B'
+Copy the irods metadata file from local into farm
+```{r, eval=FALSE}
+system(
+  paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/irods_id_sk21_mdata_cln.csv jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/raw/irods_id_sk21_mdata_cln.csv')
 )
-
-sp_fld_colors <- c('Late ring'= '#78C679',#met.brewer('Java')[2],
-                   'Early trophozoite'='#FEEEAA',#met.brewer('Java')[3],
-                   'Female LE'= met.brewer('Ingres')[5],
-                   'Female'= '#551A8B', #met.brewer('Ingres')[7],
-                   # 'Female (HE)'= '#551A8B', #met.brewer('Ingres')[7],
-                   # 'Male (LE)'=met.brewer('Nizami')[6],
-                   # 'Male (HE)'=met.brewer('Nizami')[8],
-                   # 'Gametocyte (male)'=met.brewer('Austria')[5],
-                   'Male LE'=met.brewer('Ingres')[7],#'#a2e19e',
-                   'Male'= 'mediumpurple',#'#039911',
-                   ## 'Male (HE)'= 'mediumpurple',#'#039911',
-                   'Gametocyte (male)'='#3DED97',
-                   'Gametocyte (female)'=met.brewer('Ingres')[6],
-                   'Lab' = '#D3D3D3',
-                   'Unassigned'='#DCDCDC',
-                   'Failed QC' = 'grey',
-                   'Not assigned' = 'grey',
-                   'Atlas' = 'grey',
-                   'Early ring'='#D1EC9F',
-                     'Late trophozoite'='#FEB24C',
-                     'Early schizont'='#C9E8F1',
-                     'Late schizont'='#85B1D3',
-                   'Gametocyte (developing)'='thistle',
-                   'early female' = '#749E89',
-                   'late female'= '#4E6D58',
-                    "Asexual" = "#FBC81D",
-                   NULL = 'lightgrey',
-                   'Field unlabelled'='#D2C1DC'
-)
-
-cluster_cols <- brewer.pal(7, name = 'Set2') %>% set_names(as.character(c(0:6)))
-
-
-
-donor_cols_m = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" ), '.mrna'))
-# donor_cols = met.brewer("Egypt")[c(2,4,1,3)] %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" )))
-donor_cols = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" )))
-# donor_cols_cap = c(met.brewer("Thomas")[c(1)],c('#F39EC8','#99ceff', '#b9e589')) %>% str_to_upper(set_names(paste0(c("MSC1", "MSC3", "MSC13", "MSC14" ))))
-
-
 ```
 
 
 ### Common functions
 
-#### Seurat normalization function from Elias
+#### Source commong functions, varriables and tables
 ```{r}
-
-seurat_norm_stand = function(Seurat_object, nHVG = 500){
-  Seurat_object = NormalizeData(Seurat_object, verbose = F)
-  Seurat_object = FindVariableFeatures(Seurat_object, nfeatures = nHVG, verbose = F)
-  Seurat_object = ScaleData(Seurat_object, verbose = F)
-  Seurat_object = RunPCA(Seurat_object, verbose = F)
-  return(Seurat_object)
-}
+##Boxplot labeling function
+source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_sce_common_fns.R")
+source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/plotting_common_fns.R")
+source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code/pf_common_vars.R")
 ```
+
 
 initialize variable for the sample names
 
@@ -172,18 +97,6 @@ smpl_nms <-irods_id_sk21_mdata_cln$sample_nm
 #c("MSC24", "MSC33", "MSC37", "MSC38", "MSC39", "MSC40", "MSC45", "MSC48", "MSC49", "MSC50_MACS", "MSC50_SLO", "MSC53", "MSC54", "MSC55", "MSC57", "MSC60", "MSC66", "MSC67", "MSC68", "MSC70")
 ```
 
-```{r}
-## Save for farm
-write_csv(irods_id_sk21_mdata_cln, "data/raw/Pf/irods_id_sk21_mdata_cln.csv") 
-```
-
-NB-LOCAL_CODE
-```{r, eval=FALSE}
-system(
-    paste0('rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/irods_id_sk21_mdata_cln.csv jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/raw/irods_id_sk21_mdata_cln.csv')
-    )
-```
-  
 ## Genotype clustering for MSC
 
 Read in clusters.tsv files with assignment of cells to strains and PCA plots metrics
@@ -201,40 +114,12 @@ source_irods <- irods_id_sk21_mdata_cln[,c('sample_nm', 'irods_id')] %>% deframe
 
 ```
 
-NB-LOCAL_CODE
-
-```{r, eval=F}
-##Copy souporcell files for the optimum clusters
-
-for (i in 1:length(sample_name)) {
-# for (i in 32:33) {
-  
-  ## Create new directories
-  system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/Pf/', sample_name[i], '/outs'))
-  system(paste0('mkdir -p /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/processed/Pf/', sample_name[i], '/bpcells'))
-  
-  ##Transfers
-  ##souporcell genotyping files
-  system(
-    paste0('rsync --delete -av --exclude="molecule_info.h5" --exclude="raw_feature_bc_matrix.h5" --exclude="*bam*" --exclude="metrics_summary.csv" jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/', source_irods[i], '/outs/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/Pf/', sample_name[i], '/outs/')
-    )
-  
-  ##metadata and seurat object files
-  # system(
-  #   paste0('rsync -av --include="msc_filt_w_dblts_scmap_metadata.RDS" --include="msc_filt_w_dblts_scmap.RDS" --exclude="*" jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/Pf/', source_irods[i], '/* /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/', sample_name[i], '/')
-  # )
-  
-}
-
-
-```
 
 NB-FARM_CODE
 ```{r, eval=F}
-##Copy souporcell files for the optimum clusters
+##Copy h5 files from cellranger and making relevant directories
 
 for (i in 1:length(sample_name)) {
-# for (i in 32:33) {
   
   ## Create new directories
   system(paste0('mkdir -p data/raw/Pf/', sample_name[i], '/outs'))
@@ -244,33 +129,17 @@ for (i in 1:length(sample_name)) {
   ##souporcell genotyping files
   system(
     paste0('cp /lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/', source_irods[i], '/outs/filtered_feature_bc_matrix.h5 data/raw/Pf/', sample_name[i], '/outs/')
-    )
+  )
   
 }
 
 
 ```
 
-```{r, results='hide', eval=FALSE}
-# list.files("data/processed/", pattern = "clusters.tsv", full.names = T, recursive = T, include.dirs = T)
-list.files("data/raw/Pf/", pattern = "filtered_feature_bc_matrix$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/raw//|/Pf.*') %>% str_replace(., '/', '_')))
-```
-
 
 ```{r}
-##Read filtered cellranger matrices into R
+## List filtered cellranger h5 matrices into R
 list.files("data/raw/Pf/", pattern = "filtered_feature_bc_matrix.h5$", full.names = T, recursive = T, include.dirs = T)
-```
-
-```{r}
-##Read filtered cellranger matrices into R
-# all_msc <- list.files("data/raw/", pattern = "filtered_feature_bc_matrix_h5", full.names = T, recursive = T, include.dirs = T)%>% 
-#   set_names(nm = (str_remove_all(.,'data/raw//|/Pf.*') %>% str_replace(., '/', '_'))) %>% 
-#   # str_sort(., numeric = T) %>%
-#   .[sample_name] %>%
-#   map(~Read10X(.,gene.column = 1)) %>% 
-#   imap(., ~ CreateSeuratObject(.x, project = paste0(.y, ".mrna"))) 
 ```
 
 
@@ -295,12 +164,12 @@ all_msc_bp <- list.files("data/processed/", pattern = "counts_mtx$", full.names 
 
 
 ```{r, message=F, warning=F, eval=F}
-# Convert to dense object for quicker parallelization
+# Convert to dense object - might be necessary in future instances
 all_msc <- all_msc_bp %>%
   map(., ~{
     .x[["RNA"]]$counts <- as(object = .x[["RNA"]]$counts, Class = "dgCMatrix")
     return(.x)
-    })
+  })
 
 ```
 
@@ -350,16 +219,7 @@ Check clustering of cells before filtering out by mt.percent
 
 
 ```{r, warning=FALSE, message=FALSE}
-map(all_msc, ~DimPlot(.x, dims = c(1,2), label = T))
-```
-
-```{r, warning=FALSE, message=FALSE}
-map(all_msc, ~DimPlot(.x, dims = c(1,2), label = T))
-```
-
-```{r, warning=FALSE, message=FALSE}
-
-# saveRDS(all_msc, "data/processed/all_msc.RDS")
+imap(all_msc, ~DimPlot(.x, dims = c(1,2), label = T) + labs(title = .y))
 ```
 
 ## scmap annotation
@@ -395,16 +255,8 @@ set.seed(155)
 msc_combi.sce <- indexCell(msc_combi.sce)
 ```
 
-NB-LOCAL_CODE
-```{r, eval=F}
-## transfer integrated object from sunil farm to local
-system('rsync -av jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/for_scmap/v3labmscs.ref.seur.RDS /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/Pf/')
-system('rsync -av jr35@farm22:/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/for_scmap/v3labmscs.ref.sce.RDS /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/Mali2/data/raw/Pf/')
-
-```
-
 NB-FARM_CODE
-```{r, eval=T}
+```{r, eval=F}
 ## transfer integrated object from sunil farm to local
 # system('cp /lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/for_scmap/v3labmscs.ref.seur.RDS data/raw/Pf/')
 # system('cp /lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/rdata/for_scmap/v3labmscs.ref.sce.RDS data/raw/Pf/')
@@ -445,169 +297,10 @@ scater::plotReducedDim(v3labmscs.ref.sce, dimred = "PCA", colour_by = "stageHL_r
 saveRDS(v3labmscs.ref.sce, "data/processed/Pf/v3labmscs.ref.sce.stgasx.RDS")
 ```
 
-LOCAL CODE
-```{r, message=FALSE, warning=FALSE, eval=F}
-##scmap feature selection
-v3labmscs.ref.sce <- selectFeatures(v3labmscs.ref.sce, suppress_plot = T)
-
-##Cell indexing
-set.seed(155)
-v3labmscs.ref.sce <- indexCell(v3labmscs.ref.sce)
-```
-
-
-### Preprocessing MSC query datasets
-
-```{r}
-
-#Convert to SCE and subset
-# all_msc_sce <- all_msc %>%
-#   map(. %>% as.SingleCellExperiment(.))
-```
-
-Convert seurat object into single cell experiment filling in the slots appropriately
-
-LOCAL CODE
-```{r, eval=FALSE}
-
-##This command gives error below when running the entire notebook or this whole chunk so run the command independently - coulb be and issue with rmd
-##Error in x$.self$finalize() : attempt to apply non-function - need blank line after
-# all_msc_sce <- list()
-sce_obj_creatn <- function(sce_obj, seu_obj){
-  for(i in 1:length(seu_obj)) {
-    obj1 <- SingleCellExperiment(assays = list(counts = as(object = seu_obj[[i]][["RNA"]]$counts, Class = "dgCMatrix")), colData = seu_obj[[i]]@meta.data)
-    
-    logcounts(obj1) <- log2((SingleCellExperiment::counts(obj1) + 1))
-    # normcounts(obj1) <- as.matrix(seu_obj[[i]]@assays$RNA@data)
-    rowData(obj1)$feature_symbol <- rownames(obj1)
-    obj1 <- obj1[!duplicated(rownames(obj1)), ]
-    # rowData(obj1)$feature_symbol <- str_replace(rownames(obj1), "-", "_")
-    # reducedDims(obj1) <- SimpleList(PCA = seu_obj[[i]]@reductions[["pca"]]@cell.embeddings, UMAP = seu_obj[[i]]@reductions[["umap"]]@cell.embeddings)
-    
-    sce_obj[[i]] <- obj1
-  }
-  
-  return(sce_obj)
-  
-}
-
-```
-
-LOCAL CODE
-```{r, eval=FALSE}
-
-# all_msc_sce <- sce_obj_creatn(sce_obj = list(), seu_obj = all_msc)
-all_msc_sce <- sce_obj_creatn(sce_obj = list(), seu_obj = all_msc) %>% set_names(names(all_msc))
-
-```
-
-### Stage label assignment (projection)
-transferring labels from  reference datasets
-LOCAL CODE
-```{r, warning=FALSE, message=FALSE, eval=FALSE}
-##Seurat standard transformation
-
-all_msc_jc <- lapply(all_msc_sce[1:2], function(x) {
-  scmapCell(x, list(
-    Stage_MSC = metadata(v3labmscs.ref.sce)$scmap_cell_index
-  )
-  )
-})
-
-```
-
-LOCAL CODE
-```{r, eval=FALSE}
-##Projection
-rm(all_msc_sce)
-```
-
-Assigning stage labels only when the top 3 most closest reference cells to a query cell all have a similar stage label and a cosine similarity greater than 0.4
-LOCAL CODE
-```{r, warning=FALSE, message=FALSE, eval=FALSE}
-##Seurat standard transformation
-
-all_msc_lbls <- lapply(all_msc_jc, function(x) {
-  scmapCell2Cluster(x,list(
-    # as.character(SummarizedExperiment::colData(msc_combi.sce)$stageHL_ref)
-    as.character(SummarizedExperiment::colData(v3labmscs.ref.sce)$stageHL_ref)
-  ), w = 3, threshold = 0.5)
-})
-
-```
-
-Obtaining the reference cell that is closest to each query cell in neighbourhood space regardless of cosine similarity. For those where the top 10 most closest cells constitute several stages, we also obtain the second most similar stage.
-
-LOCAL CODE
-```{r, eval=F}
-##Get the top V3 cell and top 3 similarity scores that is most similar to each MSC14 cell 
-sc_topv3_cells_sims_all <- list(all_msc_jc) %>%
-    pmap(~{
-      ..1$Stage_MSC$similarities %>% 
-        .[1:3,] %>% 
-        t() %>% 
-        data.frame() %>% 
-        rename_all(., ~str_replace(., 'X', 'sim_lab')) %>% 
-        rownames_to_column('bcode') %>%
-        left_join(., ..1$Stage_MSC$cells %>% 
-                    .[1:3,] %>% t() %>% 
-                    data.frame() %>% 
-                    rename_all(., ~str_replace(., 'X', 'msc_ref_cells')) %>% 
-                    rownames_to_column('bcode'),
-                  by = 'bcode') %>% 
-        # mutate(across(starts_with('msc_ref_cells'), ~colnames(msc_combi.sce)[.]))
-        mutate(across(starts_with('msc_ref_cells'), ~colnames(v3labmscs.ref.sce)[.]))
-    })
-
-# saveRDS(sc_topv3_cells_sims_all, 'data/processed/DB52e_star/sc_topv3_cells_sims_all.RDS')
-```
-
-```{r}
-##Add the empty element into the position with list lacking
-# scmap_cells_sim_nw <- readRDS('data/processed/MSC14/5736STDY11771546_DB52e_star/scmap_cells_sim_nw.RDS')
-
-##Get similarities for cells that have similar stage assignment by scmap and row bind
-# scmap_cs <- readRDS('data/processed/MSC14/5736STDY11771546_DB52e_star/scmap_cs.RDS')
-
-##Get similarities for cells that have similar stage assignment by scmap and row bind
-# sc_topv3_cells_sims_all <- readRDS('data/processed/DB52e_star/sc_topv3_cells_sims_all.RDS')
-
-```
-
-
-Adding annotations to MSC query datasets
-LOCAL CODE
-```{r}
-## Adding annotations to query cells
-# stg_anots <- msc_combi@meta.data[,c('stageHL_ref'), drop=F]
-stg_anots <- v3labmscs.ref.sce@colData[,c('stageHL_ref'), drop=F] %>% data.frame()
-
-## scmap merge the top labels and similarity scores
-top_stg_sim <- map(sc_topv3_cells_sims_all,
-~left_join(.x, stg_anots %>% rownames_to_column('msc_ref_cells1') %>% rename('stage_lab1' = stageHL_ref), by = 'msc_ref_cells1') %>%
-                       left_join(stg_anots %>% rownames_to_column('msc_ref_cells2') %>% rename('stage_lab2' = stageHL_ref), by = 'msc_ref_cells2') %>%
-                       left_join(stg_anots %>% rownames_to_column('msc_ref_cells3') %>% rename('stage_lab3' = stageHL_ref), by = 'msc_ref_cells3') %>% column_to_rownames('bcode')
-)
-
-
-# all_msc_anotd_preQC <- list(all_msc_lbls, all_msc_jc, all_msc, scmap_cs, sc_topv3_cell_id) %>%
-all_msc_anotd_preQC <- list(all_msc_lbls, all_msc_jc, all_msc, top_stg_sim) %>%
-  pmap(~ ..1$scmap_cluster_labs %>% 
-         data.frame()  %>% 
-         mutate(cell_bc = colnames(..2$Stage_MSC$cells))%>%
-         column_to_rownames("cell_bc") %>%
-         # dplyr::rename("Stage_MSC" = Stage_MSC)%>% 
-         mutate(across(Stage_MSC, ~droplevels(factor(., levels = stg_refnd_lvls)))) %>%
-         AddMetaData(..3, .) %>%
-         AddMetaData(., ..4) #%>%
-         # AddMetaData(., ..5)
-       )
-
-```
 
 ```{r, message=F, warning=F}
-##Read BPcells matrices
-all_msc_anots <- list.files("data/processed/", pattern = "msc_anots.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+##Read the annotations
+all_msc_anots <- list.files("data/processed/", pattern = "prelim_anotd.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
   set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
   .[sample_name] %>% 
   .[!is.na(.)] %>%
@@ -621,23 +314,19 @@ all_msc_anotd_preQC <- list(all_msc_anots, all_msc) %>%
          column_to_rownames("cell_bc") %>%
          mutate(across(Stage_MSC, ~droplevels(factor(., levels = stg_refnd_lvls)))) %>%
          AddMetaData(..2, .) 
-       )
+  )
 
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-rm(all_msc)
-```
 
-```{r, warning=FALSE, message=FALSE}
-
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T, group.by = 'Stage_MSC', cols = sp_fld_colors))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T, group.by = 'Stage_MSC', cols = sp_fld_colors) + labs(title = .y))
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
 
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T, group.by = 'stage_lab1', cols = sp_fld_colors))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = T, group.by = 'stage_lab1', cols = sp_fld_colors)+ labs(title = .y))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
@@ -650,28 +339,28 @@ map(all_msc_anotd_preQC, ~..1@meta.data %>% dplyr::count(Stage_MSC, stage_lab1))
 ```{r}
 ##Modify the stage labels for MSC14
 # all_msc_anotd_preQC[[4]] <- all_msc_anotd_preQC[[4]]@meta.data %>%
-all_msc_anotd_preQC <- pmap(list(all_msc_anotd_preQC, rep(0.4,length(sample_name)), c(rep('Late ring|Early trophozoite|late ring|early trophozoite', length(sample_name)))), ~{
+all_msc_anotd_preQC <- pmap(list(all_msc_anotd_preQC, rep(0.4,length(sample_name)), c(rep('Late ring|Early trophozoite|late ring|early trophozoite|developing', length(sample_name)))), ~{
   ..1@meta.data %>%
-  mutate(across(Stage_MSC, as.character)) %>%
-  # mutate(Stage_MSC = Stage_MSC) %>%
-  mutate(StagePrelim_lf = case_when(
-    is.na(Stage_MSC) & sim_lab1 > 0.35 & str_detect(stage_lab1, ..3) & str_detect(stage_lab2, ..3) & str_detect(stage_lab3, ..3) ~ stage_lab1,
-    is.na(Stage_MSC) & sim_lab1 > ..2 & str_detect(stage_lab1, 'Male|male') & str_detect(stage_lab2, 'Male|male') & str_detect(stage_lab3, 'Male|male') ~ stage_lab1,
-    is.na(Stage_MSC) & sim_lab1 > ..2 & str_detect(stage_lab1, 'Female|female') & str_detect(stage_lab2, 'Female|female') & str_detect(stage_lab3, 'Female|female') ~ stage_lab1,
-    TRUE ~ Stage_MSC)#,
-    # across(StagePrelim, str_to_sentence)
-  )%>%
-  mutate(StagePrelim = case_when(
-    str_detect(StagePrelim_lf, "gametocyte (developing)|schizont") ~ "Field unlabelled",
-    str_detect(StagePrelim_lf, "late|early") ~ str_to_sentence(StagePrelim_lf),
-    str_detect(StagePrelim_lf, "gametocyte") ~ str_to_sentence(str_remove_all(StagePrelim_lf, "gametocyte \\(|\\)")),
-    is.na(StagePrelim_lf) ~ "Field unlabelled",
-    TRUE ~ StagePrelim_lf)#,
-    # across(StagePrelim, str_to_sentence)
-  ) %>%
-  dplyr::select(StagePrelim, StagePrelim_lf) %>%
-  # mutate(across(starts_with('Stage_V'), ~droplevels(factor(., levels = stg_refnd_lvls)))) %>%
-  AddMetaData(.x, .)
+    mutate(across(Stage_MSC, as.character)) %>%
+    # mutate(Stage_MSC = Stage_MSC) %>%
+    mutate(StagePrelim_lf = case_when(
+      is.na(Stage_MSC) & sim_lab1 > 0.35 & str_detect(stage_lab1, ..3) & str_detect(stage_lab2, ..3) & str_detect(stage_lab3, ..3) ~ stage_lab1, ## lower cos sim of 0.35 for asexuals instead of 0.4
+      is.na(Stage_MSC) & sim_lab1 > ..2 & str_detect(stage_lab1, 'Male|male') & str_detect(stage_lab2, 'Male|male') & str_detect(stage_lab3, 'Male|male') ~ stage_lab1,
+      is.na(Stage_MSC) & sim_lab1 > ..2 & str_detect(stage_lab1, 'Female|female') & str_detect(stage_lab2, 'Female|female') & str_detect(stage_lab3, 'Female|female') ~ stage_lab1,
+      TRUE ~ Stage_MSC)#,
+      # across(StagePrelim, str_to_sentence)
+    )%>%
+    mutate(StagePrelim = case_when(
+      str_detect(StagePrelim_lf, "gametocyte (developing)|schizont") ~ "Unassigned",
+      str_detect(StagePrelim_lf, "late|early") ~ str_to_sentence(StagePrelim_lf),
+      str_detect(StagePrelim_lf, "gametocyte") ~ str_to_sentence(str_remove_all(StagePrelim_lf, "gametocyte \\(|\\)")),
+      is.na(StagePrelim_lf) ~ "Unassigned",
+      TRUE ~ StagePrelim_lf)#,
+      # across(StagePrelim, str_to_sentence)
+    ) %>%
+    dplyr::select(StagePrelim, StagePrelim_lf) %>%
+    # mutate(across(starts_with('Stage_V'), ~droplevels(factor(., levels = stg_refnd_lvls)))) %>%
+    AddMetaData(.x, .)
 })
 
 ```
@@ -684,32 +373,37 @@ map(all_msc_anotd_preQC, ~.x@meta.data %>% dplyr::count(StagePrelim))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = F, group.by = 'StagePrelim', cols = sp_fld_colors))
+imap(all_msc_anotd_preQC, ~DimPlot(.x, dims = c(1,2), label = F, group.by = 'StagePrelim', cols = sp_fld_colors)+ labs(title = .y))
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-map(all_msc_anotd_preQC, ~FeaturePlot(.x, dims = c(1,2), features = "nFeature_RNA"))
+imap(all_msc_anotd_preQC, ~FeaturePlot(.x, dims = c(1,2), features = "nFeature_RNA")+ labs(title = .y))
 ```
 
 ```{r, results='asis',  fig.width = 8, fig.height = 4}
 ##adding clusters that are used to display mitochondrial count
-# all_msc_nosct_corrected_dblt_db[[4]] <- AddMetaData(all_msc_nosct_corrected_dblt_db[[4]], old_seurat_clusters)
 
-list(all_msc_anotd_preQC) %>%
+plts <- list(all_msc_anotd_preQC, names(all_msc_anotd_preQC)) %>%
   pmap(., ~{
-  
-  cell_qc_plot <-  ..1 %>% DimPlot(., pt.size = 1, reduction = 'umap', dims = c(1,2), group.by = 'StagePrelim', cols = sp_fld_colors)#,
+    
+    cell_qc_plot <-  ..1 %>% DimPlot(., pt.size = 1, reduction = 'umap', dims = c(1,2), group.by = 'StagePrelim', cols = sp_fld_colors) +labs(title = ..2)#,
+    
+    cell_qc_plot$data <- cell_qc_plot$data %>% rownames_to_column('bcode') %>% left_join(., ..1@meta.data[,'seurat_clusters', drop = F] %>% rownames_to_column('bcode'), by='bcode') %>% column_to_rownames('bcode')
+    
+    # print(str(cell_qc_plot$data))
+    
+    cell_qc_plot<- LabelClusters(cell_qc_plot, id = "seurat_clusters", size = 9, repel = T)
+    
+    return(cell_qc_plot)
 
-cell_qc_plot$data <- cell_qc_plot$data %>% rownames_to_column('bcode') %>% left_join(., ..1@meta.data[,'seurat_clusters', drop = F] %>% rownames_to_column('bcode'), by='bcode') %>% column_to_rownames('bcode')
-
-cell_qc_plot<- LabelClusters(cell_qc_plot, id = "seurat_clusters", size = 9, repel = T)
-
-# return(list(cell_qc_filt_obj, cell_qc_plot))
-print(cell_qc_plot)
-
-})
+  })
 ```
 
+
+```{r, results='asis',  fig.width = 8, fig.height = 4}
+plts
+
+```
 
 Umap with stage labels in legend
 
@@ -733,21 +427,21 @@ for (i in 1:length(all_msc_anotd_preQC)){
   msc_qcd_anotd_mali_mapped14HL[[i]][all_msc_jc[[i]]$Stage_MSC$cells[1,]] <- all_msc_anotd_preQC[[i]]$StagePrelim
   # msc_combi@meta.data[, paste0("stage_", names(all_msc_anotd_preQC[i]))] <-  droplevels(factor(msc_qcd_anotd_mali_mapped14HL[[i]], levels = stg_refnd_lvls))
   v3labmscs.ref.sce@colData[, paste0("stage_", names(all_msc_anotd_preQC[i]))] <-  droplevels(factor(msc_qcd_anotd_mali_mapped14HL[[i]], levels = stg_refnd_lvls))
-
+  
 }
 
 labs_order <- c('Late ring', 'Early trophozoite','Female (HE)',  'Male (HE)', 'Female (LE)', 'Male (LE)','Gametocyte (developing)', 'Gametocyte (male)','Gametocyte (female)',  'Atlas')
 names(labs_order)<- labs_order
 
 umap_theme <- theme(legend.position = 'right',
-        axis.title=element_text(size=12,face="bold",hjust = 0),
-        axis.text=element_text(size=18), 
-        plot.title = element_blank(),
-        legend.title=element_text(size=14,face="bold"),
-        legend.text=element_text(size=14),
-        legend.spacing.y = unit(0.25, "cm"),
-        axis.line = element_line(arrow = arrow(angle = 20, length = unit(0.15, "inches"), ends = "last", type = "closed"))
-        )  
+                    axis.title=element_text(size=12,face="bold",hjust = 0),
+                    axis.text=element_text(size=18), 
+                    plot.title = element_blank(),
+                    legend.title=element_text(size=14,face="bold"),
+                    legend.text=element_text(size=14),
+                    legend.spacing.y = unit(0.25, "cm"),
+                    axis.line = element_line(arrow = arrow(angle = 20, length = unit(0.15, "inches"), ends = "last", type = "closed"))
+)  
 
 
 # Idents(msc_combi) <- 'MSC14_V3'
@@ -759,15 +453,15 @@ m14_scmap_mca_umap <- map(names(all_msc_anotd_preQC), ~{
     mutate(od_stg = factor(!!rlang::sym(paste0("stage_",.x)), levels = rev(stg_refnd_lvls))) %>%
     arrange(od_stg) %>%
     ggplot(aes(y = PC2, x=PC3, color = od_stg)) +
-  geom_point() +
-  # scale_color_manual(breaks=labs_order, values = sp_fld_colors, labels = str_wrap(labs_order, 10))+
-  scale_color_manual(values = sp_fld_colors)+
+    geom_point() +
+    # scale_color_manual(breaks=labs_order, values = sp_fld_colors, labels = str_wrap(labs_order, 10))+
+    scale_color_manual(values = sp_fld_colors)+
     umap_theme+
-  guides(color = guide_legend(title = 'Stage',override.aes = list(size = 4), ncol = 1, byrow = TRUE),
-         x= trunc_axis,
-         y= trunc_axis)+
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL)
+    guides(color = guide_legend(title = 'Stage',override.aes = list(size = 4), ncol = 1, byrow = TRUE),
+           x= trunc_axis,
+           y= trunc_axis)+
+    scale_x_continuous(breaks = NULL) +
+    scale_y_continuous(breaks = NULL)
 })
 
 ##Save image for manuscript fig 4
@@ -782,17 +476,17 @@ Umap with stage labels inside
 ```{r, fig.width = 7, fig.height = 5, eval=F}
 
 m14_scmap_mca_umap_labs_in <- map(names(all_msc_anotd_preQC), ~DimPlot(msc_combi, reduction = "umap",  group.by = paste0("stage_",.x), pt.size = 1, dims = c(2,3), label = T, order = labs_order, repel = T, label.size = 5) +
-  scale_color_manual(values = sp_fld_colors)+ 
-  umap_theme+
-  theme(axis.title=element_text(size=18,face="bold"), 
-        plot.title = element_blank(),
-        legend.position='None'
-        ) +
-  guides(color = guide_legend(title = 'Stage',override.aes = list(size = 4), ncol = 1, byrow = TRUE),
-         x= trunc_axis,
-         y= trunc_axis)+
-  scale_x_continuous(breaks = NULL) +
-  scale_y_continuous(breaks = NULL)
+                                    scale_color_manual(values = sp_fld_colors)+ 
+                                    umap_theme+
+                                    theme(axis.title=element_text(size=18,face="bold"), 
+                                          plot.title = element_blank(),
+                                          legend.position='None'
+                                    ) +
+                                    guides(color = guide_legend(title = 'Stage',override.aes = list(size = 4), ncol = 1, byrow = TRUE),
+                                           x= trunc_axis,
+                                           y= trunc_axis)+
+                                    scale_x_continuous(breaks = NULL) +
+                                    scale_y_continuous(breaks = NULL)
 )
 
 ##Save image for manuscript fig 4
